--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,9 +3,8 @@
 @tailwind utilities;
 
 
-body {
-    /* background-image: url("../public/bg1.jpg"); */
+/* body {
     background-repeat: no-repeat;
     background-size: 800px;
     background-position: 90% -25%;
-}
+} */
